# multichannel_capture

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
docs/: API.md  FINDINGS.md  PROPOSAL-timestamps.md  ROADMAP.md
example/: README.md  pubspec.yaml
example/integration_test/: plugin_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner/: DebugProfile.entitlements  Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: multichannel_capture.podspec
ios/Classes/: multichannel_capture.c
lib/: multichannel_capture.dart  multichannel_capture_bindings_generated.dart
macos/: multichannel_capture.podspec
src/: CMakeLists.txt  mc_anchor.h  multichannel_capture.c  multichannel_capture.h
test/: mc_interp_test.c
